간단 회원가입을 위한 form 생성 및 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>The is a Index Page</h1>
-    <h3>{{ welcome_msg }}</h3>
-    <span>{{ hello }}</span>
+    <h3>{{ user }}</h3>
+    <a href="register">회원가입</a>
 </body>
 </html>
