--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>The is a Index Page</h1>
     <h3>{{ user }}</h3>
-    <a href="register">회원가입</a>
+    {% if user.is_authenticated %}
+        <a href="logout">로그아웃</a>
+    {% else %}
+        <a href="register">회원가입</a>
+        <a href="login">로그인</a>
+    {% endif %}
 </body>
 </html>
