--- a/templates/login.html
+++ b/templates/login.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>로그인</title>
 </head>
+
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <body>
-    <h2>로그인</h2>
-    <h4>{% if msg %}{{ msg }}{% endif %}</h4>
-    <form action="login" method="post">
-        {% csrf_token %}{{ form.as_p }}
-        <button type="submit">드가쟈~!</button>
-    </form>
-    <p>
-        <a href="{% url 'index' %}">홈으로</a>
-        <a href="{% url 'register' %}">회원가입</a>
-    </p>
+    <div class="container-fluid">
+        <h2>로그인</h2>
+        <h4>{% if msg %}{{ msg }}{% endif %}</h4>
+        <form action="login" method="post">
+            {% csrf_token %}{{ form.as_p }}
+            <button class="btn btn-outline-secondary" type="submit">드가쟈~!</button>
+        </form>
+        <br>
+        <p>
+            <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'index' %}">홈으로</a>
+            <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'register' %}">회원가입</a>
+        </p>
+    </div>
 </body>
 </html>
