--- a/templates/payplan/boards.html
+++ b/templates/payplan/boards.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Pay Plan 리스트</title>
 </head>
+
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 <body>
     <h2>Pay Plan 리스트</h2>
     <h4>{% if msg %}{{msg}}{% endif %}</h4>
-    <table>
+    <table class="table table-striped">
         <thead>
-            <th>아이디</th>
-            <th>이름</th>
-            <th>가격</th>
-            <th>생성일</th>
+            <tr class="table-primary">
+                <th>아이디</th>
+                <th>이름</th>
+                <th>가격</th>
+                <th>생성일</th>
+            </tr>
         </thead>
         <tbody>
             {% for plan in pay_plans %}
@@ -29,34 +38,34 @@
         </tbody>
         
     </table>    
-    <nav>
-        <ul>
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
             {% if pay_plans.has_previous %}
-            <li>
-                <a href="?page={{ pay_plans.previous_page_number }}">이전</a>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ pay_plans.previous_page_number }}">이전</a>
             </li>
             {% else %}
-            <li>
-                <a href="#">이전</a>
+            <li class="page-item">
+                <a class="page-link" href="#">이전</a>
             </li>
             {% endif %}
-            <li>
-                <a href="#">{{ pay_plans.number }} / {{ pay_plans.paginator.num_pages }}</a>
+            <li class="page-item">
+                <a class="page-link" href="#">{{ pay_plans.number }} / {{ pay_plans.paginator.num_pages }}</a>
             </li>
             {% if pay_plans.has_next %}
-            <li>
-                <a href="?page={{ pay_plans.next_page_number }}">다음</a>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ pay_plans.next_page_number }}">다음</a>
             </li>
             {% else %}
-            <li>
-                <a href="#">다음</a>
+            <li class="page-item">
+                <a class="page-link" href="#">다음</a>
             </li>
             {% endif %}
         </ul>
     </nav>
     <p>
-        <a href="{% url 'index' %}">홈으로</a>
-        <a href="{% url 'register' %}">회원가입</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'index' %}">홈으로</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'register' %}">회원가입</a>
     </p>
 </body>
 </html>
