--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Index Page</title>
 </head>
+
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <body>
     <h1>The is a Index Page</h1>
     <h3>{{ user }}</h3>
     {% if user.is_authenticated %}
-        <a href="logout">로그아웃</a>
-        <a href="user/list">유저목록</a>
-        <a href="payplan/list">PayPlan목록</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="logout">로그아웃</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="user/list">유저목록</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="payplan/list">PayPlan목록</a>
     {% else %}
-        <a href="register">회원가입</a>
-        <a href="login">로그인</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="register">회원가입</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="login">로그인</a>
     {% endif %}
 </body>
 </html>
