--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,15 @@
     <h1>The is a Index Page</h1>
     <h3>{{ user }}</h3>
     {% if user.is_authenticated %}
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="logout">로그아웃</a>
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="user/list">유저목록</a>
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="payplan/list">PayPlan목록</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="/logout">로그아웃</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="/user/list">유저목록</a>
+        <a class="btn btn-primary" role="button" aria-disabled="true" href="/payplan/list">PayPlan목록</a>
     {% else %}
         <a class="btn btn-primary" role="button" aria-disabled="true" href="register">회원가입</a>
         <a class="btn btn-primary" role="button" aria-disabled="true" href="login">로그인</a>
     {% endif %}
+    <br><br>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
