--- a/templates/payplan/boards.html
+++ b/templates/payplan/boards.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "index.html" %}
+{% block content %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Pay Plan 리스트</title>
-</head>
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-<body>
     <h2>Pay Plan 리스트</h2>
     <h4>{% if msg %}{{msg}}{% endif %}</h4>
-    <table class="table table-striped">
+    <!-- <table class="table table-striped"> -->
+    <table class="table">
         <thead>
             <tr class="table-primary">
                 <th>아이디</th>
@@ -27,7 +15,8 @@
         </thead>
         <tbody>
             {% for plan in pay_plans %}
-                <tr>
+                <!-- 부트스트랩 table-striped 대신 cycle 템플릿 태그 이용  -->
+                <tr class={% cycle "" "table-dark" %}>
                     <td>{{ plan.id }}</td>
                     <td>{{ plan.name }}</td>
                     <td>{{ plan.price }}</td>
@@ -63,9 +52,9 @@
             {% endif %}
         </ul>
     </nav>
+    {% include "include.html" %}
     <p>
         <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'index' %}">홈으로</a>
         <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'register' %}">회원가입</a>
     </p>
-</body>
-</html>
+{% endblock %}
