--- a/templates/user/boards.html
+++ b/templates/user/boards.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>유저 리스트</title>
-</head>
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<body>
+{% extends "index.html" %}
+{% block content %}
     <h2>유저 리스트</h2>
     <h4>{% if msg %}{{msg}}{% endif %}</h4>
-    <table class="table table-striped">
+    <!-- <table class="table table-striped"> -->
+    <table class="table">
         <thead>
             <tr class="table-success">
                 <th>아이디</th>
@@ -28,7 +16,7 @@
         </thead>
         <tbody>
             {% for user in users %}
-                <tr>
+                <tr class={% cycle "" "table-dark" %}>
                     <td>{{ user.id }}</td>
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
@@ -70,5 +58,4 @@
         <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'index' %}">홈으로</a>
         <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'register' %}">회원가입</a>
     </p>
-</body>
-</html>
+{% endblock %}
