--- a/templates/payplan/boards.html
+++ b/templates/payplan/boards.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load custom_tags %}
 {% block content %}
 
     <h2>Pay Plan 리스트</h2>
@@ -19,8 +20,8 @@
                 <tr class={% cycle "" "table-dark" %}>
                     <td>{{ plan.id }}</td>
                     <td>{{ plan.name }}</td>
-                    <td>{{ plan.price }}</td>
-                    <td>{{ plan.create_at }}</td>
+                    <td>{{ plan.price|price_comma }}</td>
+                    <td>{{ plan.create_at|date:"Y M d D" }}</td>
                 </tr>
             {% endfor%}
             {% if pay_plans|length == 0 %} 조회할 데이터가 없습니다. {% endif %}
@@ -52,6 +53,7 @@
             {% endif %}
         </ul>
     </nav>
+    {% test_tags %}
     {% include "include.html" %}
     <p>
         <a class="btn btn-primary" role="button" aria-disabled="true" href="{% url 'index' %}">홈으로</a>
