--- a/templates/login.html
+++ b/templates/login.html
@@ -95,7 +95,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="ni ni-user-run"></i></span>
                         </div>
-                        {{ form.username }}
+                        {{ form.email }}
                         </div>
                     </div>
                     <div class="form-group">
