--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,117 @@
+{% load static %}
+<!--
+
+=========================================================
+* Impact Design System - v1.0.0
+=========================================================
+
+* Product Page: https://www.creative-tim.com/product/impact-design-system
+* Copyright 2010 Creative Tim (https://www.creative-tim.com)
+* Licensed under MIT (https://github.com/creativetimofficial/impact-design-system/blob/master/LICENSE.md)
+
+* Coded by Creative Tim
+
+=========================================================
+
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4."/>
+    <meta name="author" content="Creative Tim" />
+    <title>{% block title %}{% endblock %} | Shrinkers</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Index Page</title>
+    <!-- Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+    />
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/vendor/@fortawesome/fontawesome-free/css/all.min.css' %}"
+      type="text/css"
+    />
+    <!-- Page plugins -->
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/vendor/fullcalendar/dist/fullcalendar.min.css' %}"
+    />
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/vendor/sweetalert2/dist/sweetalert2.min.css' %}"
+    />
+    <!-- Argon CSS -->
+    <link
+      rel="stylesheet"
+      href="{% static 'css/dashboard.css' %}"
+      type="text/css"
+    />
 </head>
 
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <body>
-    <h1>The is a Index Page</h1>
-    <h3>{{ user }}</h3>
-    {% if user.is_authenticated %}
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="/logout">로그아웃</a>
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="/user/list">유저목록</a>
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="/payplan/list">PayPlan목록</a>
-    {% else %}
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="register">회원가입</a>
-        <a class="btn btn-primary" role="button" aria-disabled="true" href="login">로그인</a>
-    {% endif %}
-    <br><br>
-    {% block content %}
-    {% endblock %}
+    {% include 'includes/nav.html' %}
+    <!-- Main content -->
+    <div class="main-content" id="panel">
+        <!-- Topnav -->
+        {% include 'includes/top_nav.html' %}
+        <!-- Header -->
+        <!-- Header -->
+        <div class="header bg-primary pb-6">
+          <div class="container-fluid">
+            <div class="header-body">
+              <div class="row align-items-center py-4">
+                <div class="col-lg-6 col-7">
+                  <h6 class="h2 text-white d-inline-block mb-0">{% block sub_breadscumb_highlight %}{% endblock %}</h6>
+                  <nav
+                    aria-label="breadcrumb"
+                    class="d-none d-md-inline-block ml-md-4"
+                  >
+                    <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                      <li class="breadcrumb-item">
+                        <a href="#">
+                          {% block main_breadscumb %}{% endblock %}
+                        </a>
+                      </li>
+                      <li class="breadcrumb-item active" aria-current="page">
+                        {% block sub_breadscumb %}{% endblock %}
+                      </li>
+                    </ol>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Page content -->
+        <div class="container-fluid mt--6">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    <!-- Argon Scripts -->
+    <!-- Core -->
+    <script src="{% static 'assets/vendor/jquery/dist/jquery.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/js-cookie/js.cookie.js' %}"></script>
+    <script src="{% static 'assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js' %}"></script>
+    <!-- Optional JS -->
+    <script src="{% static 'assets/vendor/chart.js/dist/Chart.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/chart.js/dist/Chart.extension.js' %}"></script>
+    <!-- Argon JS -->
+    <script src="{% static 'assets/js/dashboard.js' %}?v=1.2.0"></script>
+    <!-- Demo JS - remove this in your project -->
+    <script src="{% static 'assets/js/demo.min.js' %}"></script>
 </body>
 </html>
